# mathex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  setup.py
exemples/: ex02.mathex  ex03.mathex  ex04.mathex
mathex/: evaluator.py  function.py  interpreter.py  lexer.py  mast.py  nodes.py  parser.py  tokens.py  values.py
tests/: test_parser.py
