[project]
name = "mathex"
version = "0.2.1"
description = "Simple parser and evaluator for Latex mathemaatical expressions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "numpy>=2.2.6",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
